--- a/batvsbowl.html
+++ b/batvsbowl.html
@@ -1,10 +1,114 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title>Hi.........</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+
+    <title></title>
   </head>
   <body>
 
+  <div class = "container">
+  <table class="table">
+    <thead>
+      <tr id="headeow">
+        <th scope="col">Batsman</th>
+        <th scope="col">R</th>
+        <th scope="col">B</th>
+        <th scope="col">4s</th>
+        <th scope="col">6s</th>
+        <th scope="col">SR</th>
+      </tr>
+      
+    </thead>
+    <tbody>
+      
+      <tr>
+        <th id="stricker1">playerOne</th>
+        <th scope="row"></th>
+        <td >Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row"></th>
+        <td id="stricker2">Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row"></th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+      <tr>
+        <tr scope="row"></tr>
+        <td id="stricker2">Jacob</td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<!-- Wide, No ball, Byes,Leg Byes,Wicket -->
+  <div class="container">
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+      <label class="form-check-label" for="inlineCheckbox1">Wide</label>
+    </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+      <label class="form-check-label" for="inlineCheckbox2">No Ball</label>
+    </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+      <label class="form-check-label" for="inlineCheckbox3">Byes</label>
+    </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+      <label class="form-check-label" for="inlineCheckbox3">leg Byes</label>
+    </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+      <label class="form-check-label" for="inlineCheckbox3">Wicket</label>
+    </div>
+    <button type="button" class="btn btn-success m-1">Retire</button>
+    <button type="button" class="btn btn-success m-1">Swap</button>
+  </div>
+  
+  <div class="container">
+    <div class="row">
+      <div class="col-2">
+        <div class="btn-group-vertical">
+          <button type="button" class="btn btn-success m-1">Undo</button>
+          <button type="button" class="btn btn-success m-1">Partnerships</button>
+          <button type="button" class="btn btn-success m-1">Extras</button>
+        </div>
+      </div>
+      <div class="col-10 d-flex align-items-center">
+        <div>
+          <button type="button" class="btn btn-outline-secondary m-1">0</button>
+          <button type="button" class="btn btn-outline-secondary m-1">1</button>
+          <button type="button" class="btn btn-outline-secondary m-1">2</button>
+          <button type="button" class="btn btn-outline-secondary m-1">3</button>
+          <button type="button" class="btn btn-outline-secondary m-1">4</button>
+          <button type="button" class="btn btn-outline-secondary m-1">5</button>
+          <button type="button" class="btn btn-outline-secondary m-1">6</button>
+          <button type="button" class="btn btn-outline-secondary m-1">...</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <script src="batvsbowl.js"> 
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
