--- a/batvsbowl.html
+++ b/batvsbowl.html
@@ -12,7 +12,9 @@
     <title></title>
   </head>
   <body>
-
+<div class="container">
+  <h1 id="headerTeamvsTeam">teamvsteam</h1>
+</div>
   <div class = "container">
   <table class="table">
     <thead>
@@ -23,35 +25,43 @@
         <th scope="col">4s</th>
         <th scope="col">6s</th>
         <th scope="col">SR</th>
-      </tr>
-      
+      </tr> 
     </thead>
     <tbody>
       
       <tr>
         <th id="stricker1">playerOne</th>
-        <th scope="row"></th>
-        <td >Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
       </tr>
       <tr>
-        <th scope="row"></th>
-        <td id="stricker2">Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
+        <td scope="row" id="stricker2"></td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
       </tr>
+      <thead>
+        <tr id="headeow">
+          <th scope="col">Bowler</th>
+          <th scope="col">R</th>
+          <th scope="col">B</th>
+          <th scope="col">4s</th>
+          <th scope="col">6s</th>
+          <th scope="col">ER</th>
+        </tr> 
+      </thead>
       <tr>
-        <th scope="row"></th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
-      </tr>
-      <tr>
-        <tr scope="row"></tr>
-        <td id="stricker2">Jacob</td>
-        <td></td>
-        <td></td>
+        <th scope="row" id="tableCurrentBowler">Jacob</th>
+        <th>0</th>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
       </tr>
     </tbody>
   </table>
@@ -93,14 +103,14 @@
       </div>
       <div class="col-10 d-flex align-items-center">
         <div>
-          <button type="button" class="btn btn-outline-secondary m-1">0</button>
-          <button type="button" class="btn btn-outline-secondary m-1">1</button>
-          <button type="button" class="btn btn-outline-secondary m-1">2</button>
-          <button type="button" class="btn btn-outline-secondary m-1">3</button>
-          <button type="button" class="btn btn-outline-secondary m-1">4</button>
-          <button type="button" class="btn btn-outline-secondary m-1">5</button>
-          <button type="button" class="btn btn-outline-secondary m-1">6</button>
-          <button type="button" class="btn btn-outline-secondary m-1">...</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="zero()">0</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="one()">1</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="two()">2</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="three()">3</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="four()">4</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="five()">5</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="six()">6</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="dotdot()">...</button>
         </div>
       </div>
     </div>
