--- a/sop.html
+++ b/sop.html
@@ -2,6 +2,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 
     <link rel="stylesheet" href="cricket.css">
     <script type="text/javascript">
@@ -21,8 +27,11 @@
     <p style="color: green;">Opening bowler</p>
     <input type="text" id="oBowler" placeholder="Player name" >
     <p id ="required5"></p>
-    <button class="btnStart" id ="startsubmit" onclick="selectopeningplayers()" type="submit"> Start match </button>
+    <!-- <button class="btnStart" id ="startsubmit" onclick="selectopeningplayers()" type="submit"> Start match </button> -->
+    <button type="button" class="btn btn-success" id ="startsubmit" onclick="selectOpeninglayers()">Start match </button>
     <script src="sop.js">
     </script>
+     </script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
