--- a/advanceSetting.html
+++ b/advanceSetting.html
@@ -5,13 +5,20 @@
     </script>
     <link rel="stylesheet" href="cricket.css">
     <meta charset="utf-8">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
     <title></title>
   </head>
   <body>
     <h3>Players per team?</h3>
     <div class="">
       <label for="ppt"></label>
-      <input type="number" id="ppt" value="11">
+      <input type="number" id="playerPerTeam" value="11">
     </div>
     <div class="Players per team?">
       <label for="ppt"></label>
@@ -32,5 +39,6 @@
 
   <script src="advanceSetting.js">
   </script>
-
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
