--- a/batvsbowl.html
+++ b/batvsbowl.html
@@ -96,21 +96,21 @@
     <div class="row">
       <div class="col-2">
         <div class="btn-group-vertical">
-          <button type="button" class="btn btn-success m-1">Undo</button>
+          <button type="button" class="btn btn-success m-1" onclick="">Undo</button>
           <button type="button" class="btn btn-success m-1">Partnerships</button>
           <button type="button" class="btn btn-success m-1">Extras</button>
         </div>
       </div>
       <div class="col-10 d-flex align-items-center">
         <div>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="zero()">0</button>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="one()">1</button>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="two()">2</button>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="three()">3</button>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="four()">4</button>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="five()">5</button>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="six()">6</button>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="dotdot()">...</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="runZero()">0</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="runOne()">1</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="runTwo()">2</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="runThree()">3</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="runFour()">4</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="runFive()">5</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="runSix()">6</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="dotDot()">...</button>
         </div>
       </div>
     </div>
