--- a/batvsbowl.html
+++ b/batvsbowl.html
@@ -103,13 +103,13 @@
       </div>
       <div class="col-10 d-flex align-items-center">
         <div>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="runZero()">0</button>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="runOne()">1</button>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="runTwo()">2</button>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="runThree()">3</button>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="runFour()">4</button>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="runFive()">5</button>
-          <button type="button" class="btn btn-outline-secondary m-1" onclick="runSix()">6</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="addRun(0,cStricker)">0</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="addRun(1,cStricker)">1</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="addRun(2,cStricker)">2</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="addRun(3,cStricker)">3</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="addRun(4,cStricker)">4</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="addRun(5,cStricker)">5</button>
+          <button type="button" class="btn btn-outline-secondary m-1" onclick="addRun(6,cStricker)">6</button>
           <button type="button" class="btn btn-outline-secondary m-1" onclick="dotDot()">...</button>
         </div>
       </div>
