--- a/batvsbowl.html
+++ b/batvsbowl.html
@@ -60,7 +60,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr id="currentbowler">
             <th scope="row" id="tableCurrentBowler">Jacob</th>
             <th id="tableCurrentBowlerOver">0</th>
             <td id="tableCurrentBowlerMaiden">0</td>
