--- a/index.html
+++ b/index.html
@@ -1,43 +1,78 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <script src="cricket.js">
-  </script>
-  <link rel="stylesheet" href="cricket.css">
-  <meta charset="utf-8">
-  <title>Cricket scorer</title>
-</head>
+  <head>
+    <script src="cricket.js"></script>
+    <link rel="stylesheet" href="cricket.css" />
+    <meta charset="utf-8" />
+    <title>Cricket scorer</title>
+  </head>
 
-<body>
-
-    <h3 style="color: green;">Teams</h3>
+  <body>
+    <h3 style="color: green">Teams</h3>
     <div class="Team">
       <label for="Hname"></label>
-      <input type="text" id="HostName" placeholder="Host Team" oninput="TeamNameFucntion()">
-      <p id ="required1"></p>
+      <input
+        type="text"
+        id="HostName"
+        placeholder="Host Team"
+        oninput="TeamNameFucntion()"
+      />
+      <p id="required1"></p>
       <label for="Vname"></label>
-      <input type="text" id="VisitorName" name="lastname" placeholder="VisitorName" oninput="TeamNameFucntion()" >
-      <p id ="required2"></p>
+      <input
+        type="text"
+        id="VisitorName"
+        name="lastname"
+        placeholder="VisitorName"
+        oninput="TeamNameFucntion()"
+      />
+      <p id="required2"></p>
     </div>
-    <h3 style="color: green;">Toss won by</h3>
+    <h3 style="color: green">Toss won by</h3>
     <div class="Toss">
-      <input type ="radio" name ="Toss" id = "THostTeam" value="Host Team" checked="checked" > <label id="hostTeamName">Host Team</label>
-      <input type ="radio" name ="Toss" id = "TVisitorTeam" value="Visitor Name" > <label id="visitorTeamName">Visitor Name</label><br>
+      <input
+        type="radio"
+        name="Toss"
+        id="THostTeam"
+        value="Host Team"
+        checked="checked"
+      />
+      <label id="hostTeamName">Host Team</label>
+      <input type="radio" name="Toss" id="TVisitorTeam" value="Visitor Name" />
+      <label id="visitorTeamName">Visitor Name</label><br />
     </div>
-    <h3 style="color: green;"> Opted to? <br></h3>
+    <h3 style="color: green">Opted to? <br /></h3>
     <div class="Opted">
-      <input type ="radio" name = "Opted" id = "Bat" value="Bat" checked="checked"> Bat
-      <input type ="radio" name = "Opted" id = "Bowl" value="Bowl" > Bowl <br>
+      <input type="radio" name="Opted" id="Bat" value="Bat" checked="checked" />
+      Bat <input type="radio" name="Opted" id="Bowl" value="Bowl" /> Bowl <br />
     </div>
-    <h3 style="color: green;">Overs?</h3>
+    <h3 style="color: green">Overs?</h3>
     <div class="Over">
       <label for="Overs"></label>
-      <input type="number" id="Overs" placeholder="16" min = "0" oninput="validity.valid||(value='')">
+      <input
+        type="number"
+        id="Overs"
+        placeholder="16"
+        min="0"
+        oninput="validity.valid||(value='')"
+      />
     </div>
-      <button class="aSettings" id ="asetingssubmit" onclick="advanceSettingFunction()" > Advanced Settings </button>
-      <button class="BtnStart" id ="startsubmit" onclick="StartMatchFunction()" type="submit"> Start match </button>
-    <br>
+    <button
+      class="aSettings"
+      id="asetingssubmit"
+      onclick="advanceSettingFunction()"
+    >
+      Advanced Settings
+    </button>
+    <button
+      class="BtnStart"
+      id="startsubmit"
+      onclick="StartMatchFunction()"
+      type="submit"
+    >
+      Start match
+    </button>
+    <br />
   </body>
-  <script type="text/javascript">
-  </script>
-  </html>
+  <script type="text/javascript"></script>
+</html>
